--- a/Labb-2/Labb2.ipynb
+++ b/Labb-2/Labb2.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Test points:\\n', '1. (25, 32)\\n', '2. (24.2, 31.5)\\n', '3. (22, 34)\\n', '4. (20.5, 34)\\n']\n"
+      "25, 32\n",
+      "24.2, 31.5\n",
+      "22, 34\n",
+      "20.5, 34\n"
      ]
     },
     {
@@ -18,7 +21,7 @@
        "Text(0.5, 1.0, 'Pokemon or pichu')"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -51,10 +54,21 @@
     "\n",
     "\n",
     "with open(\"../Data1/testpoints (2).txt\", \"r\") as f_read2:\n",
-    "    lines2 = f_read2.readlines()\n",
-    "print(lines2)\n",
+    "    data = f_read2.readlines()\n",
+    "    data.pop(0)  # removes text\n",
+    "\n",
+    "# I want to pick out my numbers from the list above\n",
+    "# I want to append my string (testpoint_number) \n",
+    "    for testpoints_number in data:\n",
+    "        testpoints_number = testpoints_number[4:-2]\n",
+    "        print(testpoints_number)\n",
     "\n",
     "\n",
+    "#I want to remove alphabet\n",
+    "#I want to remove \\n\n",
+    "#I want to remove ()\n",
+    "#I want to remove \". \"\n",
+    "#I want to make the numbers to an array\n",
     "\n",
     "    \n",
     "plt.scatter(pokemonwidth, pokemonheight, c = label)\n",
@@ -78,43 +92,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['1. (25', '32)\\n'], ['2. (24.2', '31.5)\\n'], ['3. (22', '34)\\n'], ['4. (20.5', '34)\\n']]\n"
+      "['1. (25, 32)\\n', '2. (24.2, 31.5)\\n', '3. (22, 34)\\n', '4. (20.5, 34)\\n']\n"
      ]
     }
    ],
    "source": [
+    "import re\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
+    "with open(\"../Data1/testpoints (2).txt\", \"r\") as f_read2:\n",
+    "    data = f_read2.readlines()\n",
+    "    data.pop(0)  # removes text\n",
     "\n",
-    "\n",
-    "with open(\"../Data1/testpoints (2).txt\", \"r\") as f_read:\n",
-    "    lines = f_read.readlines()\n",
-    "    lines.pop(0)\n",
-    "    #print(lines)\n",
-    "\n",
-    "\n",
-    "    pokemonwidth = [(line.split(\", \")) for line in lines]\n",
-    "    print(pokemonwidth)\n",
+    "# I want to pick out my numbers from the list above\n",
+    "    for testpoints_number in data:\n",
+    "        testpoints_number = testpoints_number[4:-2]\n",
+    "        print(testpoints_number)\n",
     "\n",
     "\n",
-    "    \"\"\" pokemonheight = [(line.split(\", \")[1]) for line in lines]\n",
-    "    label = [(line.split(\", \")[2]) for line in lines]\n",
-    "    lines = [line.strip(\"\\n\").split(', ' ) for line in lines] #lagrades med teststring = testring, lagras i variablen. \"\"\"\n",
     "\n",
-    "#lines = [line.strip(\"\\n\").split(', ' ) for line in lines]\n",
     "\n",
-    "    \n",
-    "#plt.scatter(pokemonwidth, pokemonheight, c = label)\n",
-    "#plt.ylabel(\"Height\")\n",
-    "#plt.xlabel('Weight')\n",
-    "#plt.title(\"Pokemon or pichu\")"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Sorted 'testpoints.txt'. I found the pattern and removed the first 4 indexes.\n",
+    "# Removes the last index too.\n",
+    "# What is left is as following: '25, 32', '24.2, 31.5' etc.\n",
+    "# Now I can split lines at ',' and append them to two lists, x_width, y_height.\n",
+    "\n",
+    "\n",
+    "    for testpoints_number in testpoints:\n",
+    "        testpoints_number = testpoints_number[4:-2]\n",
+    "        print(testpoints_number)\n",
+    "for testpointsnum\n",
+    "\n",
+    "pokemonwidth = [(line.split(\", \")[0]) for line in lines2]\n",
+    "print(lines2)"
    ]
   }
  ],
