appenda width and height

--- a/Labb-2/Labb2.ipynb
+++ b/Labb-2/Labb2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "Text(0.5, 1.0, 'Pokemon or pichu')"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -61,6 +61,8 @@
     "# I want to append my string (testpoint_number) \n",
     "    for testpoints_number in data:\n",
     "        testpoints_number = testpoints_number[4:-2]\n",
+    "        width.append = [float(line.split(\", \")[0]) for testpoints_number in data]\n",
+    "        height.append = [float(line.split(\", \")[1]) for testpoints_number in data]\n",
     "        print(testpoints_number)\n",
     "\n",
     "\n",
