--- a/Labb-2/Labb2.ipynb
+++ b/Labb-2/Labb2.ipynb
@@ -40,6 +40,84 @@
     "\n",
     "with open(\"../Data1/datapoints (3).txt\", \"r\") as f_read:\n",
     "    lines = f_read.readlines()\n",
+    "    lines.pop(0) # Cleans the text.file from first row\n",
+    "    clean_datapoints_list = []\n",
+    "    \n",
+    "    # Kudos to sam, we coded parts of this code together\n",
+    "    # We want store width,height and label in the right lists. \n",
+    "    # We turn values to floats(decimals)\n",
+    "    pokemonwidths = [float(line.split(\", \")[0]) for line in lines]   # We split into columns for scatter plot\n",
+    "    pokemonheights = [float(line.split(\", \")[1]) for line in lines] \n",
+    "    labels = [float(line.split(\", \")[2]) for line in lines]\n",
+    "    \n",
+    "    # This is so i can clean the list into floats and keep it as points so we can match with the testpointlist\n",
+    "    for line in lines:    \n",
+    "        pokemonwidth = float(line.split(\", \")[0])\n",
+    "        pokemonheight = float(line.split(\", \")[1])\n",
+    "        label = float(line.split(\", \")[2])\n",
+    "        clean_datapoints_list.append([pokemonwidth, pokemonheight, label])\n",
+    "\n",
+    "plt.scatter(pokemonwidths, pokemonheights, c = labels)\n",
+    "plt.ylabel(\"Height\")\n",
+    "plt.xlabel('Weight')\n",
+    "plt.title(\"Pikachu and Pichu\")\n",
+    "\n",
+    "\n",
+    "with open(\"../Data1/testpoints (2).txt\", \"r\") as f_read2:\n",
+    "    data = f_read2.readlines()\n",
+    "    data.pop(0)  # removes text\n",
+    "    #print(data)\n",
+    "\n",
+    "    ## Creates empty lists to store testpoints value in. \n",
+    "    t_width = None   # This is \"null\", because it doesn't have value yet. It was list before. Just so the value isn't unassigned.\n",
+    "    t_height = None \n",
+    "    clean_test_list = []\n",
+    "\n",
+    "# I want to pick out my numbers from the list above\n",
+    "# I want to append my string (testpoint_number) and put as points in the testlist\n",
+    "    for testpoints_number in data:\n",
+    "        testpoints_number = testpoints_number[4:-2]\n",
+    "        #print(testpoints_number)\n",
+    "        t_width = float(testpoints_number.split(\", \")[0])\n",
+    "        t_height = float(testpoints_number.split(\", \")[1])\n",
+    "        clean_test_list.append([t_width, t_height])\n",
+    "\n",
+    "# We now have one datapoints list with values and stored them in width height, label\n",
+    "# We have the testpoints list stored with values and stored them in width, height\n",
+    "\n",
+    "# We want to calculcate eucledian distance and between testpoints and datapoints\n",
+    "# We then want based on the information to classify if it is a pichu or pikachu based on distance between datapoints and testpoints\n",
+    "#------------------------------##-----------------------------------------------#\n",
+    "\n",
+    "# Creates empty list to store in\n",
+    "classed_list = []\n",
+    "print('clean_test_list', clean_test_list)\n",
+    "for t_width, t_height in clean_test_list:\n",
+    "    print('t_width', t_width)\n",
+    "    print('t_height', t_height)\n",
+    "    distance_list = []\n",
+    "    for pokemonwidth, pokemonheight, label in clean_datapoints_list: \n",
+    "        distance = math.sqrt((t_width - pokemonwidth)**2+(t_height - pokemonheight)**2)\n",
+    "        distance_list.append([distance, label])\n",
+    "        distance_list.sort()\n",
+    "    classed_list.append(distance_list[0][1])\n",
+    "\n",
+    "print('the answer', classed_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "with open(\"../Data1/datapoints (3).txt\", \"r\") as f_read:\n",
+    "    lines = f_read.readlines()\n",
     "    lines.pop(0) # Cleans the text.file\n",
     "    clean_datapoints_list = []\n",
     "    \n",
