Added classed answer if it is or is not the input

--- a/Labb-2/Labb2.ipynb
+++ b/Labb-2/Labb2.ipynb
@@ -107,10 +107,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user_width 25.0 32.0\n",
+      "user_width 25.0\n",
+      "user_height 32.0\n",
+      "user_width 25.0\n",
+      "user_height 31.5\n",
+      "user_width 25.0\n",
+      "user_height 34.0\n",
+      "user_width 25.0\n",
+      "user_height 34.0\n",
+      "the answer [1.0, 1.0, 1.0, 1.0]\n"
+     ]
+    }
+   ],
    "source": [
+    "### Låt användaren mata in en testpunkt och låt algoritmen avgöra dess klass. Ta med felhanteringen\n",
+    "#som tar hand om negativa tal och icke-numeriska inputs. Se till att ha användarvänliga felmeddelanden.\n",
+    "\n",
+    "# - Vi behöver ta bort en del av koden, som t ex testvalues filen. Därför att få in att en person skriver in values istället.\n",
+    "# - Ersätta testpunkterna i den matematiska formeln med värdena från userinput istället.\n",
+    "# - Vi ska då hålla koll på vilka listor dem hamnar i\n",
+    "# - Vi ska göra användarvänliga meddelanden som guidar om man liksom gjort rätt eller fel. Den tar hand om negativa tal samt icke numeriska tal\n",
+    "# - \n",
+    "## while True:\n",
+    "     #try:\n",
+    "         #x = int(input(\"Please enter a number: \"))\n",
+    "         #break\n",
+    "     #except ValueError:\n",
+    "         #print(\"Oops!  That was no valid number.  Try again...\")\n",
+    "\n",
+    "\n",
+    "# Den approachen vi använt med närmaste punkten kan klassificera fel när punkterna för respektive\n",
+    "# klass går in i varandra. Nu ska du istället välja de tio närmaste punkterna till din testpunkt. Den klass\n",
+    "# testpunkten tillhör avgörs av majoritetsröstning av de närmaste punkterna\n",
+    "\n",
     "import re\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -121,9 +158,7 @@
     "    lines.pop(0) # Cleans the text.file\n",
     "    clean_datapoints_list = []\n",
     "    \n",
-    "    # Kudos to sam, we coded parts of this code together\n",
-    "    # We want store width,height and label in the right lists. \n",
-    "    # We turn values to floats(decimals)\n",
+    "\n",
     "    pokemonwidths = [float(line.split(\", \")[0]) for line in lines]   # We split into columns for scatter plot\n",
     "    pokemonheights = [float(line.split(\", \")[1]) for line in lines] \n",
     "    labels = [float(line.split(\", \")[2]) for line in lines]\n",
@@ -135,47 +170,30 @@
     "        label = float(line.split(\", \")[2])\n",
     "        clean_datapoints_list.append([pokemonwidth, pokemonheight, label])\n",
     "\n",
-    "plt.scatter(pokemonwidths, pokemonheights, c = labels)\n",
+    "\"\"\" plt.scatter(pokemonwidths, pokemonheights, c = labels)\n",
     "plt.ylabel(\"Height\")\n",
     "plt.xlabel('Weight')\n",
     "plt.title(\"Pikachu and Pichu\")\n",
+    " \"\"\"\n",
     "\n",
     "\n",
-    "with open(\"../Data1/testpoints (2).txt\", \"r\") as f_read2:\n",
-    "    data = f_read2.readlines()\n",
-    "    data.pop(0)  # removes text\n",
-    "    #print(data)\n",
+    "user_width = input(f\"Enter width of your object\")\n",
+    "user_width = float(user_width)\n",
+    "user_height = input(f\"Enter height of your object\")\n",
+    "user_height = float(user_height)\n",
     "\n",
-    "    ## Creates empty lists to store testpoints value in. \n",
-    "    t_width = None   # This is \"null\", because it doesn't have value yet. It was list before. Just so the value isn't unassigned.\n",
-    "    t_height = None \n",
-    "    clean_test_list = []\n",
     "\n",
-    "# I want to pick out my numbers from the list above\n",
-    "# I want to append my string (testpoint_number) and put as points in the testlist\n",
-    "    for testpoints_number in data:\n",
-    "        testpoints_number = testpoints_number[4:-2]\n",
-    "        #print(testpoints_number)\n",
-    "        t_width = float(testpoints_number.split(\", \")[0])\n",
-    "        t_height = float(testpoints_number.split(\", \")[1])\n",
-    "        clean_test_list.append([t_width, t_height])\n",
-    "\n",
-    "# We now have one datapoints list with values and stored them in width height, label\n",
-    "# We have the testpoints list stored with values and stored them in width, height\n",
-    "\n",
-    "# We want to calculcate eucledian distance and between testpoints and datapoints\n",
-    "# We then want based on the information to classify if it is a pichu or pikachu based on distance between datapoints and testpoints\n",
-    "#------------------------------##-----------------------------------------------#\n",
-    "\n",
+    "## TAR DENNA SEN\n",
     "# Creates empty list to store in\n",
     "classed_list = []\n",
-    "print('clean_test_list', clean_test_list)\n",
-    "for t_width, t_height in clean_test_list:\n",
-    "    print('t_width', t_width)\n",
-    "    print('t_height', t_height)\n",
+    "print('user_width', user_width, user_height)\n",
+    "for user_input, user_height in clean_test_list:\n",
+    "    print('user_width', user_width)\n",
+    "    print('user_height', user_height)\n",
     "    distance_list = []\n",
+    "\n",
     "    for pokemonwidth, pokemonheight, label in clean_datapoints_list: \n",
-    "        distance = math.sqrt((t_width - pokemonwidth)**2+(t_height - pokemonheight)**2)\n",
+    "        distance = math.sqrt((user_width - pokemonwidth)**2+(user_height - pokemonheight)**2)\n",
     "        distance_list.append([distance, label])\n",
     "        distance_list.sort()\n",
     "    classed_list.append(distance_list[0][1])\n",
