Labb 2 finished assigmnent 0-1

--- a/Labb-2/Labb2.ipynb
+++ b/Labb-2/Labb2.ipynb
@@ -107,17 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "user_width 24.0 30.0\n",
-      "user_width 24.0\n",
-      "user_height 30.0\n",
-      "It is a pichu 0.0\n"
+      "Error: type in only numeric numbers between 1-100\n",
+      "Error: type in only numeric numbers between 1-100\n",
+      "Value needs to be between 1-100\n",
+      "Error: type in only numeric numbers between 1-100\n",
+      "It is a pickachu 1.0\n"
      ]
     },
     {
@@ -135,17 +136,6 @@
     "### Låt användaren mata in en testpunkt och låt algoritmen avgöra dess klass. Ta med felhanteringen\n",
     "#som tar hand om negativa tal och icke-numeriska inputs. Se till att ha användarvänliga felmeddelanden.\n",
     "\n",
-    "# - Vi behöver ta bort en del av koden, som t ex testvalues filen. Därför att få in att en person skriver in values istället.\n",
-    "# - Ersätta testpunkterna i den matematiska formeln med värdena från userinput istället.\n",
-    "# - Vi ska då hålla koll på vilka listor dem hamnar i\n",
-    "# - Vi ska göra användarvänliga meddelanden som guidar om man liksom gjort rätt eller fel. Den tar hand om negativa tal samt icke numeriska tal\n",
-    "# - \n",
-    "## while True:\n",
-    "     #try:\n",
-    "         #x = int(input(\"Please enter a number: \"))\n",
-    "         #break\n",
-    "     #except ValueError:\n",
-    "         #print(\"Oops!  That was no valid number.  Try again...\")\n",
     "\n",
     "\n",
     "# Den approachen vi använt med närmaste punkten kan klassificera fel när punkterna för respektive\n",
@@ -180,18 +170,37 @@
     "plt.title(\"Pikachu and Pichu\")\n",
     "\n",
     "\n",
-    "user_width = input(f\"Enter width of your object\")\n",
-    "user_width = float(user_width)\n",
-    "user_height = input(f\"Enter height of your object\")\n",
-    "user_height = float(user_height)\n",
+    "while True:\n",
+    "    user_width = input(f\"Enter width of your object\")\n",
+    "    try:\n",
+    "        user_width = float(user_width)\n",
+    "        if user_width <= 0:\n",
+    "            print(\"Value needs to be between 1-100\")\n",
+    "        else:\n",
+    "            break\n",
+    "    except:\n",
+    "        print(\"Error: type in only numeric numbers between 1-100\")\n",
     "\n",
     "\n",
-    "## TAR DENNA SEN\n",
+    "while True:\n",
+    "    user_height = input(f\"Enter width of your object\")\n",
+    "    try:\n",
+    "        user_height = float(user_height)\n",
+    "        if user_width <= 0:\n",
+    "            print(\"Value needs to be between 1-100\")\n",
+    "        else:\n",
+    "            break\n",
+    "    except:\n",
+    "        print(\"Error: type in only numeric numbers between 1-100\")\n",
+    "\n",
+    "\n",
+    "#user_width = float(user_width)\n",
+    "#user_height = input(f\"Enter height of your object\")\n",
+    "#user_height = float(user_height)\n",
+    "\n",
+    "\n",
     "# Creates empty list to store in\n",
     "classed_answer = None\n",
-    "print('user_width', user_width, user_height)\n",
-    "print('user_width', user_width)\n",
-    "print('user_height', user_height)\n",
     "distance_list = []\n",
     "\n",
     "for pokemonwidth, pokemonheight, label in clean_datapoints_list: \n",
@@ -201,6 +210,8 @@
     "classed_answer = distance_list[0][1]\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
     "if (classed_answer == 1):\n",
     "    print('It is a pickachu', classed_answer)\n",
     "elif (classed_answer == 0):\n",
@@ -208,6 +219,13 @@
     "else:\n",
     "    print('Something went wrong', classed_answer)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
