Labb-2-Uppg2-Almost finished

--- a/Labb-2/Labb2.ipynb
+++ b/Labb-2/Labb2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -10,14 +10,6 @@
      "output_type": "stream",
      "text": [
       "clean_test_list [[25.0, 32.0], [24.2, 31.5], [22.0, 34.0], [20.5, 34.0]]\n",
-      "t_width 25.0\n",
-      "t_height 32.0\n",
-      "t_width 24.2\n",
-      "t_height 31.5\n",
-      "t_width 22.0\n",
-      "t_height 34.0\n",
-      "t_width 20.5\n",
-      "t_height 34.0\n",
       "the answer [1.0, 1.0, 1.0, 0.0]\n"
      ]
     },
@@ -93,8 +85,6 @@
     "classed_list = []\n",
     "print('clean_test_list', clean_test_list)\n",
     "for t_width, t_height in clean_test_list:\n",
-    "    print('t_width', t_width)\n",
-    "    print('t_height', t_height)\n",
     "    distance_list = []\n",
     "    for pokemonwidth, pokemonheight, label in clean_datapoints_list: \n",
     "        distance = math.sqrt((t_width - pokemonwidth)**2+(t_height - pokemonheight)**2)\n",
@@ -311,6 +301,8 @@
     "    distance_list.sort()  # Sorts by ascending order\n",
     "classed_answer = distance_list[0][1]\n",
     "\n",
+    "\n",
+    "# Kudos to max who i kinda stole code from, with minor changes\n",
     "for i in range(0,12): # I chose to go with 11 results instead, so a split down the middle always can be greater on one side\n",
     "    if distance_list[n][1]:\n",
     "        majority += 1\n",
