--- a/Labb-2/Labb2.ipynb
+++ b/Labb-2/Labb2.ipynb
@@ -25,11 +25,13 @@
     }
    ],
    "source": [
+    "# Importing some tools to use for the assignment\n",
+    "\n",
     "import re\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import math\n",
     "\n",
+    "# Opens the datapoint file to read\n",
     "with open(\"../Data1/datapoints (3).txt\", \"r\") as f_read:\n",
     "    lines = f_read.readlines()\n",
     "    lines.pop(0) # Cleans the text.file from first row\n",
@@ -38,7 +40,7 @@
     "    # Kudos to sam, we coded parts of this code together\n",
     "    # We want store width,height and label in the right lists. \n",
     "    # We turn values to floats(decimals)\n",
-    "    pokemonwidths = [float(line.split(\", \")[0]) for line in lines]   # We split into columns for scatter plot\n",
+    "    pokemonwidths = [float(line.split(\", \")[0]) for line in lines]   # We split into columns\n",
     "    pokemonheights = [float(line.split(\", \")[1]) for line in lines] \n",
     "    labels = [float(line.split(\", \")[2]) for line in lines]\n",
     "    \n",
@@ -53,7 +55,6 @@
     "plt.ylabel(\"Height\")\n",
     "plt.xlabel('Weight')\n",
     "plt.title(\"Pikachu and Pichu\")\n",
-    "\n",
     "\n",
     "with open(\"../Data1/testpoints (2).txt\", \"r\") as f_read2:\n",
     "    data = f_read2.readlines()\n",
@@ -84,8 +85,10 @@
     "# Creates empty list to store in\n",
     "classed_list = []\n",
     "print('clean_test_list', clean_test_list)\n",
+    "# Runs testpoints in a for loop to append in the list\n",
     "for t_width, t_height in clean_test_list:\n",
     "    distance_list = []\n",
+    "    # Putting in the formula below for eucledian distance\n",
     "    for pokemonwidth, pokemonheight, label in clean_datapoints_list: \n",
     "        distance = math.sqrt((t_width - pokemonwidth)**2+(t_height - pokemonheight)**2)\n",
     "        distance_list.append([distance, label])\n",
@@ -125,9 +128,6 @@
    "source": [
     "### Låt användaren mata in en testpunkt och låt algoritmen avgöra dess klass. Ta med felhanteringen\n",
     "#som tar hand om negativa tal och icke-numeriska inputs. Se till att ha användarvänliga felmeddelanden.\n",
-    "\n",
-    "\n",
-    "\n",
     "# Den approachen vi använt med närmaste punkten kan klassificera fel när punkterna för respektive\n",
     "# klass går in i varandra. Nu ska du istället välja de tio närmaste punkterna till din testpunkt. Den klass\n",
     "# testpunkten tillhör avgörs av majoritetsröstning av de närmaste punkterna\n",
@@ -142,8 +142,8 @@
     "    lines.pop(0) # Cleans the text.file\n",
     "    clean_datapoints_list = []\n",
     "    \n",
-    "\n",
-    "    pokemonwidths = [float(line.split(\", \")[0]) for line in lines]   # We split into columns for scatter plot\n",
+    "    # We clean the list\n",
+    "    pokemonwidths = [float(line.split(\", \")[0]) for line in lines]\n",
     "    pokemonheights = [float(line.split(\", \")[1]) for line in lines] \n",
     "    labels = [float(line.split(\", \")[2]) for line in lines]\n",
     "    \n",
@@ -160,6 +160,7 @@
     "plt.title(\"Pikachu and Pichu\")\n",
     "\n",
     "\n",
+    "# Here we are doing two while true loops. This is for making relevant error handling and guiding the userinput\n",
     "while True:\n",
     "    user_width = input(f\"Enter width of your object\")\n",
     "    try:\n",
@@ -184,11 +185,6 @@
     "        print(\"Error: type in only numeric numbers between 1-100\")\n",
     "\n",
     "\n",
-    "#user_width = float(user_width)\n",
-    "#user_height = input(f\"Enter height of your object\")\n",
-    "#user_height = float(user_height)\n",
-    "\n",
-    "\n",
     "# Creates empty list to store in\n",
     "classed_answer = None\n",
     "distance_list = []\n",
@@ -198,7 +194,6 @@
     "    distance_list.append([distance, label])\n",
     "    distance_list.sort()\n",
     "classed_answer = distance_list[0][1]\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -234,9 +229,7 @@
     }
    ],
    "source": [
-    "# Den approachen vi använt med närmaste punkten kan klassificera fel när punkterna för respektive\n",
-    "# klass går in i varandra. Nu ska du istället välja de tio närmaste punkterna till din testpunkt. Den klass\n",
-    "# testpunkten tillhör avgörs av majoritetsröstning av de närmaste punkterna\n",
+    "# Assignment 2 - making a majority decision\n",
     "\n",
     "import re\n",
     "import matplotlib.pyplot as plt\n",
@@ -302,7 +295,7 @@
     "classed_answer = distance_list[0][1]\n",
     "\n",
     "\n",
-    "# Kudos to max who i kinda stole code from, with minor changes\n",
+    "# Kudos to max who helped me with some of the code altough i did some changes to it\n",
     "for i in range(0,12): # I chose to go with 11 results instead, so a split down the middle always can be greater on one side\n",
     "    if distance_list[n][1]:\n",
     "        majority += 1\n",
@@ -312,15 +305,7 @@
     "elif majority < 5:\n",
     "    print(\"By split decision we decided that it seems like it's Pichu!\")\n",
     "else:\n",
-    "    print(\"Impossible!\")\n",
-    "\n",
-    "\n",
-    "# Choose ten testpoints from a lista. \n",
-    "# Use a majority vote to determine who what is most likely\n",
-    "\n",
-    "# Den approachen vi använt med närmaste punkten kan klassificera fel när punkterna för respektive\n",
-    "# klass går in i varandra. Nu ska du istället välja de tio närmaste punkterna till din testpunkt. Den klass\n",
-    "# testpunkten tillhör avgörs av majoritetsröstning av de närmaste punkterna"
+    "    print(\"Impossible!\")\n"
    ]
   }
  ],
