--- a/Excercise/L11-OOP-Basic.ipynb
+++ b/Excercise/L11-OOP-Basic.ipynb
@@ -21,14 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class '__main__.Converter'>\n"
+     "ename": "AttributeError",
+     "evalue": "'Converter' object has no attribute 'property'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [102], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConverter\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, value):\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;241m=\u001b[39m value\n",
+      "Cell \u001b[1;32mIn [102], line 8\u001b[0m, in \u001b[0;36mConverter\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;241m=\u001b[39m value\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m# getter method\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;129m@value\u001b[39m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mproperty\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_value\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124;03m\"\"\"Read-Only property\"\"\"\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_value\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Converter' object has no attribute 'property'"
      ]
     }
    ],
@@ -39,84 +44,41 @@
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "\n",
-    "    def inch_to_cm(self):\n",
-    "        return self.value*2.54\n",
-    "    def foot_to_meters(self):\n",
-    "        return self.value*0.304\n",
-    "    def pound_to_kg(self):\n",
-    "        return self.value*0.453\n",
+    "        # getter method\n",
+    "    @value.property\n",
+    "    def get_value(self):\n",
+    "        \"\"\"Read-Only property\"\"\"\n",
+    "        return self._value\n",
+    "    @value.setter\n",
+    "    def value(self, value: int) -> None:\n",
+    "        \"\"\"Setter for value with error handling\"\"\"\n",
+    "        print(\"Value setter is running\")\n",
+    "        if not isinstance(value, int):\n",
+    "            raise ValueError(f\"Number needs to be an int {type(value)}\")\n",
+    "        if not (1 <= value <= 100):\n",
+    "            raise ValueError(\"Number must be between 1 and 125\")\n",
+    "        self._value = value\n",
+    "\n",
+    "\n",
+    "    def inch_to_cm(self, cm_value):\n",
+    "        self.value *= 2.54\n",
+    "        return self.value\n",
+    "    def foot_to_meters(self, m_value):\n",
+    "        self.value *= 0.304\n",
+    "        return self.value\n",
+    "    def pound_to_kg(self, kg_value):\n",
+    "        self.value *= 0.453\n",
+    "        return self.value\n",
     "    def __repr__(self):\n",
-    "        return f\"xxxxx\"\n",
+    "        return f\"{self.value=}\"\n",
     "\n",
+    "length = Converter(40)\n",
+    "#length2 = Converter(100)\n",
+    "#weight = Converter(100)\n",
     "\n",
-    "\n",
-    "value1 = Converter(10)\n",
-    "print(Converter)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello there, this is a dunder repper\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "inch_to_cm() missing 1 required positional argument: 'cm_unit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [6], line 38\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mConverter(\u001b[38;5;241m10\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     37\u001b[0m unit1 \u001b[38;5;241m=\u001b[39m Converter(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m---> 38\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43munit1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minch_to_cm\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m(unit1\u001b[38;5;241m.\u001b[39mfoot_to_meters())\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28mprint\u001b[39m(unit1\u001b[38;5;241m.\u001b[39mpound_to_kg())\n",
-      "\u001b[1;31mTypeError\u001b[0m: inch_to_cm() missing 1 required positional argument: 'cm_unit'"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "class Converter:\n",
-    "    def __init__(self, unit):\n",
-    "        self.unit = unit\n",
-    "\n",
-    "    @property\n",
-    "    def unit(self) -> int:\n",
-    "        \"\"\"Read-Only property, can't set the unit\"\"\"\n",
-    "        return self_unit\n",
-    "\n",
-    "    @unit.setter\n",
-    "    def unit(self, unit: int) -> None:\n",
-    "        \"\"\"Setter for unit with error handling\"\"\"\n",
-    "        if not isinstance(unit, (int, float)):\n",
-    "            raise TypeError(f\"Unit must be a number not {type(unit)}\")\n",
-    "\n",
-    "        if not(0 < unit < 1000):\n",
-    "            raise ValueError(\"Unit must between 0 and 100\")\n",
-    "        \n",
-    "        self._unit = unit\n",
-    "\n",
-    "    def inch_to_cm(self, cm_unit):\n",
-    "        return self.unit*2.54\n",
-    "    def foot_to_meters(self, m_unit):\n",
-    "        return self.unit*0.304\n",
-    "    def pound_to_kg(self, kg_unit):\n",
-    "        return self.unit*0.453\n",
-    "    def __repr__(self):\n",
-    "        return f\"Hello there, this is a dunder repper\"\n",
-    "\n",
-    "print(f\"{Converter(10)}\")\n",
-    "\n",
-    "unit1 = Converter(5)\n",
-    "print(unit1.inch_to_cm())\n",
-    "print(unit1.foot_to_meters())\n",
-    "print(unit1.pound_to_kg())"
+    "length.inch_to_cm(3)\n",
+    "#length2.foot_to_meters(1)\n",
+    "#weight.pound_to_kg(1)"
    ]
   }
  ],
