--- a/Code-Along/L11-OOP-Basic.ipynb
+++ b/Code-Along/L11-OOP-Basic.ipynb
@@ -381,6 +381,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "class Student:\n",
     "    \"\"\"Student class for representing students with name, age and activity\"\"\" # docstring\n",
     "    \n",
@@ -395,6 +397,7 @@
     "        self.active = active\n",
     "        Student.number_students += 1\n",
     "\n",
+    "    # Property ger oss ett extra djup i funktionen, förlänger beteendet av en annan funktion\n",
     "    # read-only property - @ symbol makes it into a decorator\n",
     "    # read-only because we haven't defined a setter\n",
     "    @property\n",
@@ -403,6 +406,7 @@
     "        return self._name\n",
     "    \n",
     "    # getter\n",
+    "    # This is because\n",
     "    @property\n",
     "    def age(self) -> int:\n",
     "        print(\"age getter is running .... \")\n",
@@ -427,6 +431,71 @@
     "\n",
     "student1 = Student(\"David\", 30, True)\n",
     "student1.name = \"Ella\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# i andra språk använder man getters och setters \n",
+    "class Person:\n",
+    "    \n",
+    "    # type hinting - returns None\n",
+    "    def __init__(self, age: float) -> None:\n",
+    "        # bare attribute\n",
+    "        self._age = age\n",
+    "\n",
+    "    def get_age(self) -> float:\n",
+    "        return self._age\n",
+    "    \n",
+    "    def set_age(self, value: float) -> None:\n",
+    "        # valideringskod\n",
+    "        self._age = value\n",
+    "\n",
+    "person_instance = Person(40)\n",
+    "#person_instance.age = -5\n",
+    "print(person_instance.get_age())\n",
+    "\n",
+    "person_instance.set_age(10)\n",
+    "person_instance.get_age()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# i Python vill man direkt komma åt ens property och då dekorerar med med @property\n",
+    "\n",
+    "class Person:\n",
+    "    \n",
+    "    # type hinting - returns None\n",
+    "    def __init__(self, age: float) -> None:\n",
+    "        # assignment -> setter körs\n",
+    "        self.age = age\n",
+    "\n",
+    "    @property\n",
+    "    def age(self) -> float:\n",
+    "        print(\"getter called ...\")\n",
+    "        return self._age\n",
+    "    \n",
+    "    # andra metoder ...\n",
+    "    def run_away(self):\n",
+    "        print(\"Person runs away from class ...\")\n",
+    "\n",
+    "    @age.setter\n",
+    "    def age(self, value: float) -> None:\n",
+    "        # valideringskod\n",
+    "\n",
+    "        print(\"Setter called ...\")\n",
+    "        self._age = value\n",
+    "\n",
+    "person_instance = Person(40)\n",
+    "person_instance.age = 20\n",
+    "person_instance.age"
    ]
   },
   {
