--- a/Excercise/L11-OOP-Basic.ipynb
+++ b/Excercise/L11-OOP-Basic.ipynb
@@ -21,19 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Converter' object has no attribute 'property'",
+     "ename": "NameError",
+     "evalue": "name 'value' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [102], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConverter\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, value):\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;241m=\u001b[39m value\n",
-      "Cell \u001b[1;32mIn [102], line 8\u001b[0m, in \u001b[0;36mConverter\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;241m=\u001b[39m value\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m# getter method\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;129m@value\u001b[39m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mproperty\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_value\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124;03m\"\"\"Read-Only property\"\"\"\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_value\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Converter' object has no attribute 'property'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConverter\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, value):\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;241m=\u001b[39m value\n",
+      "Cell \u001b[1;32mIn [18], line 14\u001b[0m, in \u001b[0;36mConverter\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124;03m\"\"\"Read-Only property\"\"\"\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_value\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;129m@value\u001b[39m\u001b[38;5;241m.\u001b[39msetter\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mvalue\u001b[39m(\u001b[38;5;28mself\u001b[39m, value: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:   \u001b[38;5;66;03m#Type hinting - returns\u001b[39;00m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;124;03m\"\"\"Setter for value with error handling\"\"\"\u001b[39;00m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValue setter is running\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'value' is not defined"
      ]
     }
    ],
@@ -45,16 +45,19 @@
     "        self.value = value\n",
     "\n",
     "        # getter method\n",
-    "    @value.property\n",
+    "    @property\n",
     "    def get_value(self):\n",
     "        \"\"\"Read-Only property\"\"\"\n",
     "        return self._value\n",
+    "\n",
+    "        \n",
     "    @value.setter\n",
-    "    def value(self, value: int) -> None:\n",
+    "    def value(self, value: int) -> None:   #Type hinting - returns\n",
     "        \"\"\"Setter for value with error handling\"\"\"\n",
     "        print(\"Value setter is running\")\n",
+    "\n",
     "        if not isinstance(value, int):\n",
-    "            raise ValueError(f\"Number needs to be an int {type(value)}\")\n",
+    "            raise ValueError(f\"Number needs to be an int, not{type(value)}\")\n",
     "        if not (1 <= value <= 100):\n",
     "            raise ValueError(\"Number must be between 1 and 125\")\n",
     "        self._value = value\n",
