--- a/Excercise/L11-OOP-Basic.ipynb
+++ b/Excercise/L11-OOP-Basic.ipynb
@@ -21,19 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'value' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConverter\u001b[39;00m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, value):\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalue \u001b[38;5;241m=\u001b[39m value\n",
-      "Cell \u001b[1;32mIn [18], line 14\u001b[0m, in \u001b[0;36mConverter\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124;03m\"\"\"Read-Only property\"\"\"\u001b[39;00m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_value\n\u001b[1;32m---> 14\u001b[0m \u001b[38;5;129m@value\u001b[39m\u001b[38;5;241m.\u001b[39msetter\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mvalue\u001b[39m(\u001b[38;5;28mself\u001b[39m, value: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:   \u001b[38;5;66;03m#Type hinting - returns\u001b[39;00m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;124;03m\"\"\"Setter for value with error handling\"\"\"\u001b[39;00m\n\u001b[0;32m     17\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValue setter is running\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'value' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feet = 3.04 m\n",
+      "inch = 25.4 cm\n",
+      "pounds = 4.53 kg\n"
      ]
     }
    ],
@@ -46,42 +43,143 @@
     "\n",
     "        # getter method\n",
     "    @property\n",
-    "    def get_value(self):\n",
+    "    def value(self):\n",
     "        \"\"\"Read-Only property\"\"\"\n",
     "        return self._value\n",
     "\n",
     "        \n",
     "    @value.setter\n",
-    "    def value(self, value: int) -> None:   #Type hinting - returns\n",
+    "    def value(self, value: float) -> None:   #Type hinting - returns\n",
     "        \"\"\"Setter for value with error handling\"\"\"\n",
-    "        print(\"Value setter is running\")\n",
+    "        #print(\"Value setter is running\")\n",
     "\n",
-    "        if not isinstance(value, int):\n",
+    "        if not isinstance(value, float):\n",
     "            raise ValueError(f\"Number needs to be an int, not{type(value)}\")\n",
     "        if not (1 <= value <= 100):\n",
     "            raise ValueError(\"Number must be between 1 and 125\")\n",
     "        self._value = value\n",
     "\n",
     "\n",
-    "    def inch_to_cm(self, cm_value):\n",
-    "        self.value *= 2.54\n",
-    "        return self.value\n",
-    "    def foot_to_meters(self, m_value):\n",
-    "        self.value *= 0.304\n",
-    "        return self.value\n",
-    "    def pound_to_kg(self, kg_value):\n",
-    "        self.value *= 0.453\n",
-    "        return self.value\n",
+    "    def inch_to_cm(self):\n",
+    "        length_cm = self.value * 2.54\n",
+    "        return length_cm\n",
+    "    def foot_to_meters(self):\n",
+    "        length_m = self.value * 0.304\n",
+    "        return length_m\n",
+    "    def pound_to_kg(self):\n",
+    "        pound_kg = self.value * 0.453\n",
+    "        return pound_kg\n",
     "    def __repr__(self):\n",
     "        return f\"{self.value=}\"\n",
     "\n",
-    "length = Converter(40)\n",
-    "#length2 = Converter(100)\n",
-    "#weight = Converter(100)\n",
+    "length = Converter(10.0)\n",
     "\n",
-    "length.inch_to_cm(3)\n",
-    "#length2.foot_to_meters(1)\n",
-    "#weight.pound_to_kg(1)"
+    "print(f\"feet = {length.foot_to_meters()} m\")\n",
+    "print(f\"inch = {length.inch_to_cm()} cm\")\n",
+    "print(f\"pounds = {length.pound_to_kg():.2f} kg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Person (*)\n",
+    "Create a class named Person, with parameterized constructor with the following parameters:\n",
+    "\n",
+    "- name\n",
+    "- age\n",
+    "- email\n",
+    "- Turn name, age, email into properties with following validations in their setters:\n",
+    "\n",
+    "- name - must be string\n",
+    "- age - must be number between 0 and 125\n",
+    "- email - must include an @ sign\n",
+    "It should also have __repr__ method to represent the Person class in a neat way.\n",
+    "\n",
+    "Also create a method say_hello() that prints\n",
+    "\n",
+    "Hi, my name is ..., I am ... years old, my email address is ...  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name = Pernilla, age = 32, email = pernilla@gmail.com\n",
+      "name = Joel Oscarsson, age = 27, email = j_oscarsson@hotmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class Person:\n",
+    "\n",
+    "    def __init__(self, name: str, age: int, email):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.email = email\n",
+    "\n",
+    "\n",
+    "    ## Kommentera ctrl k ctrl c \n",
+    "\n",
+    "    @property\n",
+    "    def name(self):\n",
+    "        \"\"\"Read - Only \"\"\"\n",
+    "        return self._name\n",
+    "    @property\n",
+    "    def age(self):\n",
+    "        \"\"\"Read - Only \"\"\"\n",
+    "        return self._age \n",
+    "    @property\n",
+    "    def email(self):\n",
+    "        \"\"\"Read - Only \"\"\"\n",
+    "        return self._email \n",
+    "\n",
+    "\n",
+    "    @name.setter\n",
+    "    def name(self, name):\n",
+    "        \"\"\"Read - Only \"\"\"\n",
+    "        if not isinstance(name, str):\n",
+    "            raise TypeError(f\"Name must be a string\")\n",
+    "        self._name = name\n",
+    "\n",
+    "\n",
+    "    # setter\n",
+    "    @email.setter\n",
+    "    def email(self, value):\n",
+    "        \"\"\"Setter for email with error handling\"\"\"\n",
+    "        # validation code\n",
+    "        if not \"@\" in value:\n",
+    "            raise TypeError(f\"You must have a @ \")\n",
+    "        self._email = value \n",
+    "\n",
+    "    @age.setter\n",
+    "    def age(self, age: int):\n",
+    "        \"\"\"Setter for age with error handling\"\"\"\n",
+    "        if not (0 <= age <= 125):\n",
+    "            raise ValueError(\"Age must be between 0 and 125\")\n",
+    "        self._age = age\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return(f\"name = {self._name}, age = {self._age}, email = {self._email}\")\n",
+    "    \n",
+    "    def say_hello(self):\n",
+    "        return(f\"Hi my name is{self._name}, and i am {self._age} old, my email address is {self._email}\")\n",
+    "\n",
+    "p = Person(\"Pernilla\", 32, \"pernilla@gmail.com\") \n",
+    "print(p)\n",
+    "\n",
+    "try:\n",
+    "    print(person1)\n",
+    "except TypeError as x:\n",
+    "    print(x)\n",
+    "except ValueError as z:\n",
+    "    print(z)"
    ]
   }
  ],
