--- a/Code-Along/L12-OOP_Polymorphins.ipynb
+++ b/Code-Along/L12-OOP_Polymorphins.ipynb
@@ -13,27 +13,20 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "f-string: unmatched '(' (1478462303.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [4], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"{len(\"1234\")=}\")\u001b[0m\n\u001b[1;37m                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m f-string: unmatched '('\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len([1,23,4])=3\n",
+      "len('1234')=4\n"
      ]
     }
    ],
    "source": [
-    "# Example with Python built-in\n",
-    "# Example of polymorphic beahvior\n",
-    "len(f\"{len([1,23,4])}=\")\n",
-    "print(f\"{len(\"1234\")=}\")"
+    "# example with Python built-in\n",
+    "# example of Polymorphic behavior\n",
+    "print(f\"{len([1,23,4])=}\")\n",
+    "print(f\"{len('1234')=}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -164,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -173,18 +166,22 @@
      "text": [
       "Vector(1.0, 2.0, 3.0)\n",
       "Vectors can't be empty\n",
-      "(-1.0, -2.0)\n"
+      "(-1.0, -2.0)\n",
+      "len(v3)=2\n",
+      "v3[0]=2.0\n",
+      "abs(Vector(3,4))=5.0\n"
      ]
     }
    ],
    "source": [
     "from __future__ import annotations\n",
+    "import matplotlib.pyplot as plt \n",
     "\n",
     "class Vector:\n",
     "    \"\"\"A class to represent Euclidean vector with magnitude and direction\"\"\"\n",
     "\n",
     "    # *numbers -> arbitrary numbers of positional arguments\n",
-    "    def __init__(self, *numbers: float | int) -> None:  # Stjärnan betyder arbitary positional argument\n",
+    "    def __init__(self, *numbers: float | int) -> None:\n",
     "        \n",
     "        # validation\n",
     "        for number in numbers:\n",
@@ -199,7 +196,7 @@
     "    @property\n",
     "    def numbers(self) -> tuple:\n",
     "        \"\"\"Returns numbers\"\"\"\n",
-    "        return self._numbers\n",
+    "        return self._numbers # tuple\n",
     "\n",
     "    # operator overload +\n",
     "    def __add__(self, other: Vector) -> Vector:\n",
@@ -212,19 +209,68 @@
     "    def __sub__(self, other: Vector) -> Vector:\n",
     "        if self.validate_vectors(other):\n",
     "            numbers = (a-b for a,b in zip(self.numbers, other.numbers))\n",
-    "            return Vector(*numbers)     # generator, plockar ut väärdena från generatorn. I detta fall listan.\n",
+    "            return Vector(*numbers)\n",
     "\n",
     "    def validate_vectors(self, other: Vector) -> bool:\n",
     "        \"\"\"Validates if two vectors have same length\"\"\"\n",
     "        if not isinstance(other, Vector) or len(other) != len(self):\n",
     "            raise TypeError(\"Both must be Vector and must have same length\")\n",
-    "        return len(self) == len(other)\n",
+    "        return len(self) == len(other) # evaluates to either True or False\n",
     "\n",
     "    # to use len() on Vector we have overload it\n",
     "    def __len__(self) -> int:\n",
     "        \"\"\"Returns number of elements in a Vector not the length of the Vector\"\"\"\n",
     "        return len(self.numbers)\n",
     "    \n",
+    "    # operator overload [] operator - __getitem__()\n",
+    "    def __getitem__(self, item: int) -> float:\n",
+    "        return self.numbers[item]\n",
+    "\n",
+    "    # overload abs() function\n",
+    "    def __abs__(self) -> float:\n",
+    "        \"\"\"Returns Euclidean 2nd norm of a Vector\"\"\"\n",
+    "        return sum(a**2 for a in self.numbers)**.5\n",
+    "    \n",
+    "    # overload * operator\n",
+    "    def __mul__(self, value: int|float) -> Vector:\n",
+    "        print(\"__mul__ called\")\n",
+    "        if not isinstance(value, (int, float)):\n",
+    "            raise TypeError(f\"The value must be a scalar that is int or float, not {type(value)}\")\n",
+    "        numbers = (value*a for a in self.numbers)\n",
+    "        return Vector(*numbers)\n",
+    "\n",
+    "    # reflected multiplication\n",
+    "    def __rmul__(self, value: int|float) -> Vector:\n",
+    "        print(\"__rmul__ called\")\n",
+    "        return self*value\n",
+    "\n",
+    "    def plot(self, *others: Vector) -> None:\n",
+    "        \"\"\" Visualize 2D vectors\"\"\"\n",
+    "        X, Y = [], []\n",
+    "\n",
+    "        for vector in tuple(others):\n",
+    "            if Vector.is2D(vector) and Vector.is2D(self):\n",
+    "                X.append(vector[0])\n",
+    "                Y.append(vector[1])\n",
+    "        \n",
+    "        X.append(self[0])\n",
+    "        Y.append(self[1])\n",
+    "\n",
+    "        originX = originY = tuple(0 for _ in range(len(X)))\n",
+    "\n",
+    "        plt.quiver(originX, originY, X, Y, scale=1,\n",
+    "                   scale_units=\"xy\", angles=\"xy\")\n",
+    "        plt.xlim(-2, 10)\n",
+    "        plt.ylim(-2, 10)\n",
+    "        plt.xlabel(\"x\")\n",
+    "        plt.ylabel(\"y\")\n",
+    "        plt.title(f\"{self}, {others}\")\n",
+    "        plt.grid()\n",
+    "        plt.show()\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def is2D(vector: Vector) -> bool:\n",
+    "        return len(vector) == 2\n",
     "\n",
     "    def __repr__(self) -> str:\n",
     "        return f\"Vector{self._numbers}\"\n",
@@ -241,12 +287,50 @@
     "v2 = Vector(-1,-2)\n",
     "print(v2.numbers)\n",
     "\n",
-    "v3 = Vector(2,3)"
+    "v3 = Vector(2,3)\n",
+    "print(f\"{len(v3)=}\")\n",
+    "\n",
+    "print(f\"{v3[0]=}\")\n",
+    "\n",
+    "print(f\"{abs(Vector(3,4))=}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Vector(1,2)*5\n",
+    "\n",
+    "# 5*Vector(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "5*Vector(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1 = Vector(1,2)\n",
+    "v2 = Vector(3,1)\n",
+    "v3 = v1+v2\n",
+    "\n",
+    "v3.plot(v1, v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +347,7 @@
        "Vector(1.0, 1.0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,29 +360,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object <genexpr> at 0x0000020EA6C440B0>\n"
+      "<generator object <genexpr> at 0x000001AF20F22350>\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'Vector' object has no attribute 'numbers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\j_osc\\.virtualenvs\\PythonSchool-iXQr8Z-p\\lib\\site-packages\\IPython\\core\\formatters.py:707\u001b[0m, in \u001b[0;36mPlainTextFormatter.__call__\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m    700\u001b[0m stream \u001b[39m=\u001b[39m StringIO()\n\u001b[0;32m    701\u001b[0m printer \u001b[39m=\u001b[39m pretty\u001b[39m.\u001b[39mRepresentationPrinter(stream, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mverbose,\n\u001b[0;32m    702\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmax_width, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnewline,\n\u001b[0;32m    703\u001b[0m     max_seq_length\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmax_seq_length,\n\u001b[0;32m    704\u001b[0m     singleton_pprinters\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msingleton_printers,\n\u001b[0;32m    705\u001b[0m     type_pprinters\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtype_printers,\n\u001b[0;32m    706\u001b[0m     deferred_pprinters\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdeferred_printers)\n\u001b[1;32m--> 707\u001b[0m printer\u001b[39m.\u001b[39;49mpretty(obj)\n\u001b[0;32m    708\u001b[0m printer\u001b[39m.\u001b[39mflush()\n\u001b[0;32m    709\u001b[0m \u001b[39mreturn\u001b[39;00m stream\u001b[39m.\u001b[39mgetvalue()\n",
-      "File \u001b[1;32mc:\\Users\\j_osc\\.virtualenvs\\PythonSchool-iXQr8Z-p\\lib\\site-packages\\IPython\\lib\\pretty.py:410\u001b[0m, in \u001b[0;36mRepresentationPrinter.pretty\u001b[1;34m(self, obj)\u001b[0m\n\u001b[0;32m    407\u001b[0m                         \u001b[39mreturn\u001b[39;00m meth(obj, \u001b[39mself\u001b[39m, cycle)\n\u001b[0;32m    408\u001b[0m                 \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mobject\u001b[39m \\\n\u001b[0;32m    409\u001b[0m                         \u001b[39mand\u001b[39;00m callable(\u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__dict__\u001b[39m\u001b[39m.\u001b[39mget(\u001b[39m'\u001b[39m\u001b[39m__repr__\u001b[39m\u001b[39m'\u001b[39m)):\n\u001b[1;32m--> 410\u001b[0m                     \u001b[39mreturn\u001b[39;00m _repr_pprint(obj, \u001b[39mself\u001b[39;49m, cycle)\n\u001b[0;32m    412\u001b[0m     \u001b[39mreturn\u001b[39;00m _default_pprint(obj, \u001b[39mself\u001b[39m, cycle)\n\u001b[0;32m    413\u001b[0m \u001b[39mfinally\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\j_osc\\.virtualenvs\\PythonSchool-iXQr8Z-p\\lib\\site-packages\\IPython\\lib\\pretty.py:778\u001b[0m, in \u001b[0;36m_repr_pprint\u001b[1;34m(obj, p, cycle)\u001b[0m\n\u001b[0;32m    776\u001b[0m \u001b[39m\"\"\"A pprint that just redirects to the normal repr function.\"\"\"\u001b[39;00m\n\u001b[0;32m    777\u001b[0m \u001b[39m# Find newlines and replace them with p.break_()\u001b[39;00m\n\u001b[1;32m--> 778\u001b[0m output \u001b[39m=\u001b[39m \u001b[39mrepr\u001b[39;49m(obj)\n\u001b[0;32m    779\u001b[0m lines \u001b[39m=\u001b[39m output\u001b[39m.\u001b[39msplitlines()\n\u001b[0;32m    780\u001b[0m \u001b[39mwith\u001b[39;00m p\u001b[39m.\u001b[39mgroup():\n",
-      "Cell \u001b[1;32mIn [22], line 19\u001b[0m, in \u001b[0;36mVector.__repr__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__repr__\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[1;32m---> 19\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVector(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumbers\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Vector' object has no attribute 'numbers'"
-     ]
+     "data": {
+      "text/plain": [
+       "Vector(0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
