--- a/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
+++ b/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
@@ -39,42 +39,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "(5 / 1)\n"
      ]
-    }
-   ],
-   "source": [
-    "def gcd(m,n):\n",
-    "    while m%n != 0:\n",
-    "        oldm = m\n",
-    "        oldn = n\n",
-    "\n",
-    "        m = oldn\n",
-    "        n = oldm%oldn\n",
-    "    return n\n",
-    "\n",
-    "print(gcd(20,10))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "Frac(2, 4)"
+       "Frac(15, 3)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,21 +70,23 @@
     "\n",
     "    def simplify(self, value = None):\n",
     "        \"\"\"Simplifies fractions\"\"\"\n",
+    "        simplyfied_nominator = self.nominator\n",
+    "        simplyfied_denominator = self.denominator\n",
     "        i = 2\n",
-    "        while i < min(nominator, denominator) +1:\n",
-    "            if nominator % i == 0 and denominator % i == 0:\n",
-    "                nominator = nominator // i\n",
-    "                denominator = denominator // i\n",
+    "        while i < min(simplyfied_nominator, simplyfied_denominator) +1:\n",
+    "            if simplyfied_nominator % i == 0 and simplyfied_denominator % i == 0:\n",
+    "                simplyfied_nominator = simplyfied_nominator // i\n",
+    "                simplyfied_denominator = simplyfied_denominator // i\n",
     "            else:\n",
     "                i += 1\n",
-    "        return(nominator, denominator)\n",
+    "        return f\"({simplyfied_nominator} / {simplyfied_denominator})\"\n",
     "\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return f\"Frac({self.nominator}, {self.denominator})\"  # För att andra utvecklare ska kunna se hur man skapar denna instansen\n",
     "\n",
-    "myfraction = Frac(2, 4)\n",
-    "myfraction = (sum)\n",
+    "myfraction = Frac(15, 3)\n",
+    "print(myfraction.simplify())\n",
     "myfraction\n"
    ]
   },
