--- a/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
+++ b/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,12 +48,13 @@
        "Frac(15, 3)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from __future__ import division\n",
     "\n",
     "class Frac:\n",
     "\n",
@@ -81,50 +75,17 @@
     "                i += 1\n",
     "        return f\"({simplyfied_nominator} / {simplyfied_denominator})\"\n",
     "\n",
-    "    \n",
+    "    # Represent the fraction in mixed terms\n",
+    "    def mixed(self):\n",
+    "        pass\n",
+    "\n",
+    "\n",
     "    def __repr__(self):\n",
     "        return f\"Frac({self.nominator}, {self.denominator})\"  # För att andra utvecklare ska kunna se hur man skapar denna instansen\n",
     "\n",
     "myfraction = Frac(15, 3)\n",
     "print(myfraction.simplify())\n",
     "myfraction\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5\n"
-     ]
-    }
-   ],
-   "source": [
-    "nominator = 2\n",
-    "denominator = 4\n",
-    "\n",
-    "sum = (nominator / denominator)\n",
-    "print(sum)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nominator = 2\n",
-    "denominator = 4\n",
-    "\n",
-    "While (nominator! = denominator)\n",
-    "if (nominator > denominator)\n",
-    "then "
    ]
   },
   {
