--- a/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
+++ b/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
@@ -32,35 +32,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5 / 1)\n"
+      "(15 / -3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Frac(15, 3)"
+       "Frac(15, -3)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "from __future__ import division\n",
     "\n",
     "class Frac:\n",
     "\n",
-    "    def __init__(self, top, bottom) -> None:\n",
-    "        self.nominator = top\n",
-    "        self.denominator = bottom\n",
+    "    def __init__(self, nominator: int, denominator: int) -> None:\n",
+    "        self.nominator = nominator\n",
+    "        self.denominator = denominator\n",
+    "\n",
     "\n",
     "    def simplify(self, value = None):\n",
     "        \"\"\"Simplifies fractions\"\"\"\n",
@@ -73,7 +75,22 @@
     "                simplyfied_denominator = simplyfied_denominator // i\n",
     "            else:\n",
     "                i += 1\n",
+    "\n",
+    "\n",
+    "        if value != None:\n",
+    "            if simplyfied_nominator % value != 0 or simplyfied_denominator % value != 0:\n",
+    "                raise ValueError(f\"Both numbers cant be divided by {value}\")\n",
+    "            else:\n",
+    "                simplyfied_nominator = int(simplyfied_nominator / value)\n",
+    "                simplyfied_denominator = int(simplyfied_denominator / value)\n",
+    "\n",
     "        return f\"({simplyfied_nominator} / {simplyfied_denominator})\"\n",
+    "\n",
+    "\n",
+    "    def __str__(self, top, bottom):\n",
+    "        return (f\"The answer is ({self.nominator}/{self.denominator})\")\n",
+    "\n",
+    "\n",
     "\n",
     "    # Represent the fraction in mixed terms\n",
     "    def mixed(self):\n",
@@ -83,9 +100,64 @@
     "    def __repr__(self):\n",
     "        return f\"Frac({self.nominator}, {self.denominator})\"  # För att andra utvecklare ska kunna se hur man skapar denna instansen\n",
     "\n",
-    "myfraction = Frac(15, 3)\n",
+    "myfraction = Frac(15, -3)\n",
     "print(myfraction.simplify())\n",
     "myfraction\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class Frac in module __main__:\n",
+      "\n",
+      "class Frac(builtins.object)\n",
+      " |  Frac(top, bottom) -> None\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, top, bottom) -> None\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __repr__(self)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  mixed(self)\n",
+      " |      # Represent the fraction in mixed terms\n",
+      " |  \n",
+      " |  simplify(self, value=None)\n",
+      " |      Simplifies fractions\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(Frac)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    a = num // dem\n",
+    "b = num % dem\n",
+    "print 'The mixed number is {} and {}/{}'.format(a, b, dem)"
    ]
   },
   {
